--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,7 @@ services:
         image: postgres 
         environment: 
             - POSTGRES_DB=blueddit
-            - POSTGRES_USER=admin
+            - POSTGRES_USER=postgres
             - POSTGRES_PASSWORD=admin
         ports:
             - "5432:5432"
-        expose:
-            - "5432"
