--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"watch": "tsc -w"
 	},
 	"devDependencies": {
+		"@types/express": "^4.17.8",
 		"@types/node": "^14.14.0",
 		"nodemon": "^2.0.6",
 		"ts-node": "^9.0.0",
@@ -21,7 +22,12 @@
 		"@mikro-orm/core": "^4.2.1",
 		"@mikro-orm/migrations": "^4.2.1",
 		"@mikro-orm/postgresql": "^4.2.1",
-		"pg": "^8.4.1"
+		"apollo-server-express": "^2.18.2",
+		"express": "^4.17.1",
+		"graphql": "^15.3.0",
+		"pg": "^8.4.1",
+		"reflect-metadata": "^0.1.13",
+		"type-graphql": "^1.1.0"
 	},
 	"mikro-orm": {
 		"useTsNode": true,
