--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
 	"main": "index.js",
 	"license": "MIT",
 	"scripts": {
+		"watch": "tsc -w",
 		"dev": "nodemon dist/index.js",
 		"dev2": "nodemon --exec ts-node src/index.ts",
 		"start": "node dist/index.js",
 		"start2": "ts-node src/index.ts",
-		"watch": "tsc -w"
+		"create:migration": "mikro-orm migration:create"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.8",
@@ -23,9 +24,13 @@
 		"@mikro-orm/migrations": "^4.2.1",
 		"@mikro-orm/postgresql": "^4.2.1",
 		"apollo-server-express": "^2.18.2",
+		"argon2": "^0.27.0",
+		"connect-redis": "^5.0.0",
 		"express": "^4.17.1",
+		"express-session": "^1.17.1",
 		"graphql": "^15.3.0",
 		"pg": "^8.4.1",
+		"redis": "^3.0.2",
 		"reflect-metadata": "^0.1.13",
 		"type-graphql": "^1.1.0"
 	},
