--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,14 @@
-version: '3.8'
-services: 
-    database:
-        image: postgres 
-        environment: 
-            - POSTGRES_DB=blueddit
-            - POSTGRES_USER=postgres
-            - POSTGRES_PASSWORD=admin
-        ports:
-            - "5432:5432"
+version: "3.8"
+services:
+  database:
+    image: postgres
+    environment:
+      - POSTGRES_DB=blueddit
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=admin
+    ports:
+      - "5432:5432"
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
