--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
 		"create:migration": "mikro-orm migration:create"
 	},
 	"devDependencies": {
+		"@types/connect-redis": "^0.0.14",
 		"@types/express": "^4.17.8",
+		"@types/express-session": "^1.17.0",
 		"@types/node": "^14.14.0",
+		"@types/redis": "^2.8.28",
 		"nodemon": "^2.0.6",
 		"ts-node": "^9.0.0",
 		"typescript": "^4.0.3"
