--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
 	},
 	"devDependencies": {
 		"@types/connect-redis": "^0.0.14",
+		"@types/cors": "^2.8.8",
 		"@types/express": "^4.17.8",
 		"@types/express-session": "^1.17.0",
 		"@types/node": "^14.14.0",
@@ -29,6 +30,7 @@
 		"apollo-server-express": "^2.18.2",
 		"argon2": "^0.27.0",
 		"connect-redis": "^5.0.0",
+		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"express-session": "^1.17.1",
 		"graphql": "^15.3.0",
