--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,7 @@
     "@graphql-codegen/typescript-operations": "1.17.8",
     "@graphql-codegen/typescript-urql": "^2.0.2",
     "@types/node": "^14.14.2",
+    "babel-plugin-styled-components": "^1.11.1",
     "typescript": "^4.0.3"
   }
 }
