--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "isomorphic-unfetch": "^3.1.0",
     "next": "^9.1.7",
     "next-urql": "^2.0.0",
+    "nodemailer": "^6.4.14",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-is": "^17.0.1",
