--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
 		"@types/express": "^4.17.8",
 		"@types/express-session": "^1.17.0",
 		"@types/node": "^14.14.0",
+		"@types/nodemailer": "^6.4.0",
 		"@types/redis": "^2.8.28",
 		"nodemon": "^2.0.6",
 		"ts-node": "^9.0.0",
@@ -34,6 +35,7 @@
 		"express": "^4.17.1",
 		"express-session": "^1.17.1",
 		"graphql": "^15.3.0",
+		"nodemailer": "^6.4.14",
 		"pg": "^8.4.1",
 		"redis": "^3.0.2",
 		"reflect-metadata": "^0.1.13",
