--- a/server/package.json
+++ b/server/package.json
@@ -16,9 +16,11 @@
 		"@types/cors": "^2.8.8",
 		"@types/express": "^4.17.8",
 		"@types/express-session": "^1.17.0",
+		"@types/ioredis": "^4.17.6",
 		"@types/node": "^14.14.0",
 		"@types/nodemailer": "^6.4.0",
 		"@types/redis": "^2.8.28",
+		"@types/uuid": "^8.3.0",
 		"nodemon": "^2.0.6",
 		"ts-node": "^9.0.0",
 		"typescript": "^4.0.3"
@@ -35,11 +37,12 @@
 		"express": "^4.17.1",
 		"express-session": "^1.17.1",
 		"graphql": "^15.3.0",
+		"ioredis": "^4.19.1",
 		"nodemailer": "^6.4.14",
 		"pg": "^8.4.1",
-		"redis": "^3.0.2",
 		"reflect-metadata": "^0.1.13",
-		"type-graphql": "^1.1.0"
+		"type-graphql": "^1.1.0",
+		"uuid": "^8.3.1"
 	},
 	"mikro-orm": {
 		"useTsNode": true,
